Majority of changes completed.

--- a/modules/administration/pages/repo-metadata.adoc
+++ b/modules/administration/pages/repo-metadata.adoc
@@ -96,4 +96,4 @@ salt <ubuntu-client> state.apply channels
 . OPTIONAL: For Salt clients, you might prefer to use a state to manage your GPG keys.
 
 
-For more information about troubleshooting GPG keys, see xref:administration:tshoot-sync.adoc[].
+For more information about troubleshooting GPG keys, see xref:administration:troubleshooting/tshoot-sync.adoc[].
