--- a/modules/administration/pages/troubleshooting/tshoot-autoinstallation.adoc
+++ b/modules/administration/pages/troubleshooting/tshoot-autoinstallation.adoc
@@ -1,10 +1,6 @@
-[[troubleshooting-clients]]
-= Troubleshooting Clients
+[[troubleshooting-autoinstallation]]
+= Troubleshooting Autoinstallation
 
-// Keep this in alphabetical order. We might also want to consider breaking these into their own topics, like we have in the admin guide. LKB 2019-04-05
-
-
-== Autoinstallation
 
 Depending on your base channel, new autoinstallation profiles might be subscribed to a channel that is missing required packages.
 
