--- a/modules/administration/pages/troubleshooting/tshoot-baremetalsystems.adoc
+++ b/modules/administration/pages/troubleshooting/tshoot-baremetalsystems.adoc
@@ -1,7 +1,5 @@
-[[troubleshooting-clients]]
-= Troubleshooting Clients
-
-== Bare Metal Systems
+[[troubleshooting-bare-metal-systems]]
+= Troubleshooting Bare Metal Systems
 
 If a bare metal system on the network is not automatically added to the [guilabel]``Systems`` list, check these things first:
 
