--- a/modules/administration/pages/troubleshooting/tshoot-bootstrapendoflifecentos6clients.adoc
+++ b/modules/administration/pages/troubleshooting/tshoot-bootstrapendoflifecentos6clients.adoc
@@ -1,7 +1,5 @@
-[[troubleshooting-clients]]
-= Troubleshooting Clients
-
-== Bootstrap End-of-Life {centos} 6 Clients
+[[troubleshooting-bootstrapping-endoflife-centos6-clients]]
+= Troubleshooting Bootstrapping End-of-Life {centos} 6 Clients
 
 {centos} 6 is now at end-of-life, and the images provided in the client repository for this operating system are out of date.
 Bootstrapping new {centos} 6 clients using these packages will fail.
