--- a/modules/administration/pages/troubleshooting/tshoot-bootstraprepositoryforeolproducts.adoc
+++ b/modules/administration/pages/troubleshooting/tshoot-bootstraprepositoryforeolproducts.adoc
@@ -1,7 +1,5 @@
-[[troubleshooting-clients]]
-= Troubleshooting Clients
-
-== Bootstrap Repository for End-of-Life Products
+[[troubleshooting-bootstrapping-repository-for-eol-products]]
+= Troubleshooting Bootstrapping Repository for End-of-Life Products
 
 When supported products are synchronized, bootstrap repositories are automatically created and regenerated on the {productname} Server.
 When a product reaches end-of-life and becomes unsupported, bootstrap repositories must be created manually if you want to continue using the product.
