--- a/modules/administration/pages/troubleshooting/tshoot-clonedsaltclients.adoc
+++ b/modules/administration/pages/troubleshooting/tshoot-clonedsaltclients.adoc
@@ -1,7 +1,5 @@
-[[troubleshooting-clients]]
-= Troubleshooting Clients
-
-== Cloned Salt Clients
+[[troubleshooting-cloned-salt-clients]]
+= Troubleshooting Cloned Salt Clients
 
 If you have used your hypervisor clone utility, and attempted to register the cloned Salt client, you might get this error:
 
@@ -13,4 +11,4 @@ This is caused by the new, cloned, system having the same machine ID as an exist
 You can adjust this manually to correct the error and register the cloned system successfully.
 
 
-For more information and instructions, see xref:administration:tshoot-registerclones.adoc[].
+For more information and instructions, see xref:administration:troubleshooting/tshoot-registerclones.adoc[].
