--- a/modules/administration/pages/troubleshooting/tshoot-disablingfqdns.adoc
+++ b/modules/administration/pages/troubleshooting/tshoot-disablingfqdns.adoc
@@ -1,7 +1,5 @@
-[[troubleshooting-clients]]
-= Troubleshooting Clients
-
-== Disabling the FQDNS grain
+[[troubleshooting-disabling-fqdns-grain]]
+= Troubleshooting Disabling the FQDNS Grain
 
 The FQDNS grain returns the list of all the fully qualified DNS services in the system.
 Collecting this information is usually a fast process, but if the DNS settings have been misconfigured, it could take a much longer time.
