--- a/modules/administration/pages/troubleshooting/tshoot-passinggrainstostartevent.adoc
+++ b/modules/administration/pages/troubleshooting/tshoot-passinggrainstostartevent.adoc
@@ -1,7 +1,6 @@
-[[troubleshooting-clients]]
-= Troubleshooting Clients
+[[troubleshooting-passing-grains-start-event]]
+= Troubleshooting Passing Grains to Start Event
 
-== Passing Grains to a Start Event
 
 Every time a Salt client starts, it passes the ``machine_id`` grain to {productname}. {productname} uses this grain to determine if the client is registered.
 This process requires a synchronous Salt call. Synchronous Salt calls block other processes, so if you have a lot of clients start at the same time, the process could create significant delays.
