--- a/modules/administration/pages/troubleshooting/tshoot-proxyconnectionsandfdqn.adoc
+++ b/modules/administration/pages/troubleshooting/tshoot-proxyconnectionsandfdqn.adoc
@@ -1,7 +1,5 @@
-[[troubleshooting-clients]]
-= Troubleshooting Clients
-
-== Proxy Connections and FQDN
+[[troubleshooting-proxy-connections-and-fdqn]]
+= Troubleshooting Proxy Connections and FQDN
 
 Sometimes clients connected through a proxy appear in the {webui}, but do not show that they are connected through a proxy.
 This can occur if you are not using the fully qualified domain name (FQDN) to connect, and the proxy is not known to {productname}.
