--- a/modules/administration/pages/troubleshooting/tshoot-registeringolderclients.adoc
+++ b/modules/administration/pages/troubleshooting/tshoot-registeringolderclients.adoc
@@ -1,7 +1,5 @@
-[[troubleshooting-clients]]
-= Troubleshooting Clients
-
-== Registering Older Clients
+[[troubleshooting-registering-older-clients]]
+= Troubleshooting Registering Older Clients
 
 //
 //LKB 2020-06-03
