--- a/modules/administration/pages/troubleshooting/tshoot-rhcdnmultiplecertificates.adoc
+++ b/modules/administration/pages/troubleshooting/tshoot-rhcdnmultiplecertificates.adoc
@@ -1,7 +1,5 @@
-[[troubleshooting-clients]]
-= Troubleshooting Clients
-
-== Red Hat CDN Channel and Multiple Certificates
+[[troubleshooting-rhcdn-multiple-certificates]]
+= Troubleshooting Red Hat CDN Channel and Multiple Certificates
 
 The {redhat} content delivery network (CDN) channels sometimes provide multiple certificates, but the {productname} {webui} can only import a single certificate.
 If CDN presents a certificate that is different to the one the {productname} {webui} knows about, validation fails and permission to access the repository is denied, even though the certificate is accurate.
