--- a/modules/client-configuration/pages/clients-centos.adoc
+++ b/modules/client-configuration/pages/clients-centos.adoc
@@ -51,7 +51,7 @@ For example, when working with `x86_64` architecture, you need this products:
 ====
 {centos} 6 is now at end-of-life, and the ISO images provided in the repository are out of date.
 Bootstrapping new {centos} 6 clients using these packages will fail.
-If you need to bootstrap new {centos} 6 clients, follow the troubleshooting procedure in xref:administration:troubleshooting/tshoot-clients.adoc[].
+If you need to bootstrap new {centos} 6 clients, see xref:administration:troubleshooting/tshoot-clients-registeringolderclients.adoc[].
 ====
 
 include::snippets/addchannels_vendor_webui.adoc[]
@@ -75,7 +75,7 @@ The channels you need for this procedure are:
 ====
 {centos} 6 is now at end-of-life, and the ISO images provided in the repository are out of date.
 Bootstrapping new {centos} 6 clients using these packages will fail.
-If you need to bootstrap new {centos} 6 clients, follow the troubleshooting procedure in xref:administration:troubleshooting/tshoot-clients.adoc[].
+If you need to bootstrap new {centos} 6 clients, see xref:administration:troubleshooting/tshoot-clients-registeringolderclients.adoc[].
 ====
 
 include::snippets/addchannels_vendor_cli.adoc[]
@@ -100,7 +100,7 @@ The channels you need for this procedure are:
 ====
 {centos} 6 is now at end-of-life, and the ISO images provided in the repository are out of date.
 Bootstrapping new {centos} 6 clients using these packages will fail.
-If you need to bootstrap new {centos} 6 clients, follow the troubleshooting procedure in xref:administration:troubleshooting/tshoot-clients.adoc[].
+If you need to bootstrap new {centos} 6 clients, see xref:administration:troubleshooting/tshoot-clients-registeringolderclients.adoc[].
 ====
 
 include::snippets/addchannels_novendor_cli_multiarch.adoc[]
@@ -183,7 +183,7 @@ For more information, see xref:client-configuration:registration-overview.adoc[]
 [WARNING]
 ====
 To register and use {centos}{nbsp}6 clients, you need to configure the {productname} Server to support older types of SSL encryption.
-For more information about how to resolve this error, see ``Registering Older Clients`` at xref:administration:troubleshooting/tshoot-clients.adoc[].
+For more information about how to resolve this error, see xref:administration:troubleshooting/tshoot-clients-registeringolderclients.adoc[].
 ====
 
 
