--- a/modules/client-configuration/pages/clients-rh-cdn.adoc
+++ b/modules/client-configuration/pages/clients-rh-cdn.adoc
@@ -189,7 +189,7 @@ The channels you need for this procedure are:
 ====
 {redhat} 6 is now at end-of-life, and the ISO images provided in the repository are out of date.
 Bootstrapping new {redhat} 6 clients using these packages will fail.
-If you need to bootstrap new {redhat} 6 clients, follow the troubleshooting procedure in xref:administration:troubleshooting/tshoot-clients.adoc[].
+If you need to bootstrap new {redhat} 6 clients, see xref:administration:troubleshooting/tshoot-clients-registeringolderclients.adoc[]
 ====
 
 include::snippets/manual_channels.adoc[]
@@ -238,7 +238,7 @@ The products you need for this procedure are:
 ====
 {redhat} 6 is now at end-of-life, and the ISO images provided in the repository are out of date.
 Bootstrapping new {redhat} 6 clients using these packages will fail.
-If you need to bootstrap new {redhat} 6 clients, follow the troubleshooting procedure in xref:administration:troubleshooting/tshoot-clients.adoc[].
+If you need to bootstrap new {redhat} 6 clients, see xref:administration:troubleshooting/tshoot-clients-registeringolderclients.adoc[]
 ====
 
 
@@ -282,7 +282,7 @@ The channels you need for this procedure are:
 ====
 {redhat} 6 is now at end-of-life, and the ISO images provided in the repository are out of date.
 Bootstrapping new {redhat} 6 clients using these packages will fail.
-If you need to bootstrap new {redhat} 6 clients, follow the troubleshooting procedure in xref:administration:troubleshooting/tshoot-clients.adoc[].
+If you need to bootstrap new {redhat} 6 clients, see xref:administration:troubleshooting/tshoot-clients-registeringolderclients.adoc[]
 ====
 
 include::snippets/addchannels_novendor_cli.adoc[]
@@ -465,5 +465,5 @@ For more information on registering your clients, see xref:client-configuration:
 [WARNING]
 ====
 To register and use {rhel}{nbsp}6 clients, you need to configure the {productname} Server to support older types of SSL encryption.
-For more information about how to resolve this error, see ``Registering Older Clients`` at xref:administration:troubleshooting/tshoot-clients.adoc[].
+For more information about how to resolve this error, see xref:administration:troubleshooting/tshoot-clients-registeringolderclients.adoc[]
 ====
