--- a/modules/installation-and-upgrade/pages/install-ibmz.adoc
+++ b/modules/installation-and-upgrade/pages/install-ibmz.adoc
@@ -61,7 +61,7 @@ The database storage disk should have:
 You will need to ensure you have sufficient disk storage for {productname} before running [command]``yast2 susemanager_setup``.
 By default, the {productname} file system, including the embedded database and patch directories, reside within the root directory.
 While adjustments are possible when installation is complete, it is important that you specify and monitor these adjustments closely.
-For information on storage management and reclaiming disk space, see the troubleshooting section in the {productname} Administration Guide.
+For information on storage management and reclaiming disk space, see xref:administration:troubleshooting/tshoot-intro.adoc[] in the Administration Guide.
 
 [WARNING]
 ====
