--- a/modules/administration/pages/troubleshooting/tshoot-mountingtmpwithnoexec.adoc
+++ b/modules/administration/pages/troubleshooting/tshoot-mountingtmpwithnoexec.adoc
@@ -1,7 +1,5 @@
-[[troubleshooting-clients]]
-= Troubleshooting Clients
-
-== Mounting /tmp with noexec
+[[troubleshooting-mounting-tmp-noexec]]
+= Troubleshooting Mounting /tmp with noexec
 
 Salt runs remote commands from [filename]``/tmp`` on the client's file system.
 Therefore you must not mount [filename]``/tmp`` with the [option]``noexec`` option.
