--- a/modules/administration/pages/troubleshooting/tshoot-saltclientsdownanddns.adoc
+++ b/modules/administration/pages/troubleshooting/tshoot-saltclientsdownanddns.adoc
@@ -1,7 +1,5 @@
-[[troubleshooting-clients]]
-= Troubleshooting Clients
-
-== Salt clients shown as down and DNS settings
+[[troubleshooting-shoot-salt-clients-down-and-dns]]
+= Troubleshooting Salt clients shown as down and DNS settings
 
 Even if the Salt client is running, actions such as package refresh or apply states can be marked as failed with the message:
 
