--- a/modules/administration/pages/troubleshooting/tshoot-upgrade.adoc
+++ b/modules/administration/pages/troubleshooting/tshoot-upgrade.adoc
@@ -1,5 +1,5 @@
-[[upgrade-troubleshooting]]
-= Troubleshooting
+[[troubleshooting-upgrade]]
+= Troubleshooting Upgrade
 
 This section contains some common problems you might encounter with {productname} upgrades, and solutions to resolving them.
 
