--- a/modules/client-configuration/pages/clients-rh-rhui.adoc
+++ b/modules/client-configuration/pages/clients-rh-rhui.adoc
@@ -178,7 +178,7 @@ The channels you need for this procedure are:
 ====
 {redhat} 6 is now at end-of-life, and the ISO images provided in the repository are out of date.
 Bootstrapping new {redhat} 6 clients using these packages will fail.
-If you need to bootstrap new {redhat} 6 clients, follow the troubleshooting procedure in xref:administration:troubleshooting/tshoot-clients.adoc[].
+If you need to bootstrap new {redhat} 6 clients, see xref:administration:troubleshooting/tshoot-clients-registeringolderclients.adoc[].
 ====
 
 include::snippets/manual_channels.adoc[]
@@ -225,7 +225,7 @@ The products you need for this procedure are:
 ====
 {redhat} 6 is now at end-of-life, and the ISO images provided in the repository are out of date.
 Bootstrapping new {redhat} 6 clients using these packages will fail.
-If you need to bootstrap new {redhat} 6 clients, follow the troubleshooting procedure in xref:administration:troubleshooting/tshoot-clients.adoc[].
+If you need to bootstrap new {redhat} 6 clients, see xref:administration:troubleshooting/tshoot-clients-registeringolderclients.adoc[].
 ====
 
 include::snippets/addchannels_vendor_webui.adoc[]
@@ -268,7 +268,7 @@ The channels you need for this procedure are:
 ====
 {redhat} 6 is now at end-of-life, and the ISO images provided in the repository are out of date.
 Bootstrapping new {redhat} 6 clients using these packages will fail.
-If you need to bootstrap new {redhat} 6 clients, follow the troubleshooting procedure in xref:administration:troubleshooting/tshoot-clients.adoc[].
+If you need to bootstrap new {redhat} 6 clients, see xref:administration:troubleshooting/tshoot-clients-registeringolderclients.adoc[].
 ====
 
 include::snippets/addchannels_novendor_cli.adoc[]
@@ -375,5 +375,5 @@ For more information on registering your clients, see xref:client-configuration:
 [WARNING]
 ====
 To register and use {rhel}{nbsp}6 clients, you need to configure the {productname} Server to support older types of SSL encryption.
-For more information, see ``Registering Older Clients`` at xref:administration:troubleshooting/tshoot-clients.adoc[].
+For more information, see xref:administration:troubleshooting/tshoot-clients-registeringolderclients.adoc[].
 ====
