Conflict changes resolved.

--- a/modules/administration/nav-administration-guide.adoc
+++ b/modules/administration/nav-administration-guide.adoc
@@ -78,7 +78,6 @@ endif::[]
 ** xref:tuning-changelogs.adoc[Tuning Changelogs]
 // Users
 ** xref:users.adoc[Users]
-<<<<<<< HEAD
 // Troubleshooting - always keep as the last chapter, arrange topics A-Z
 ** xref:troubleshooting/tshoot-intro.adoc[Troubleshooting]
 *** xref:troubleshooting/tshoot-autoinstallation.adoc[Troubleshooting Autoinstallation]
@@ -89,41 +88,12 @@ endif::[]
 *** xref:troubleshooting/tshoot-corruptrepo.adoc[Troubleshooting Corrupt Repositories]
 *** xref:troubleshooting/tshoot-custom-channel.adoc[Troubleshooting Custom Channel]
 *** xref:troubleshooting/tshoot-disablingfqdns.adoc[Troubleshooting Disabling the FQDNS Grain]
-=======
-// Troubleshooting - always keep as the last chapter
-** xref:tshoot-intro.adoc[OLD Troubleshooting]
-*** xref:tshoot-corruptrepo.adoc[Troubleshooting Corrupt Repositories]
-*** xref:tshoot-custom-channel.adoc[Troubleshooting Custom Channel]
-*** xref:tshoot-diskspace.adoc[Troubleshooting Disk Space]
-*** xref:tshoot-firewalls.adoc[Troubleshooting Firewalls]
-*** xref:tshoot-inactiveclients.adoc[Troubleshooting Inactive Clients]
-*** xref:tshoot-iss.adoc[Troubleshooting Inter-Server Synchronization]
-*** xref:tshoot-localcert.adoc[Troubleshooting Local Certificates]
-*** xref:tshoot-logintimeout.adoc[Troubleshooting Login Timeout]
-*** xref:tshoot-notifications.adoc[Troubleshooting Notifications]
-*** xref:tshoot-osadjabberd.adoc[Troubleshooting OSAD and jabberd]
-*** xref:tshoot-packages.adoc[Troubleshooting Packages]
-*** xref:tshoot-registerclones.adoc[Troubleshooting Registering Cloned Clients]
-*** xref:tshoot-registertradrhel.adoc[Troubleshooting Registering Traditional RHEL Clients]
-*** xref:tshoot-hostname-rename.adoc[Troubleshooting Renaming the Server]
-*** xref:tshoot-rpctimeout.adoc[Troubleshooting RPC Timeouts]
-*** xref:tshoot-saltboot.adoc[Troubleshooting Saltboot]
-*** xref:tshoot-sync.adoc[Troubleshooting Synchronization]
-*** xref:tshoot-taskomatic.adoc[Troubleshooting Taskomatic]
-*** xref:tshoot-clients.adoc[ADDED TSHOOT CLIENTS]
-*** xref:troubleshooting.adoc[ADDED TSHOOT INSTALL]
-// Troubleshooting - always keep as the last chapter
-** xref:troubleshooting/tshoot-intro.adoc[LEVEL DOWN Troubleshooting]
-*** xref:troubleshooting/shoot-corruptrepo.adoc[Troubleshooting Corrupt Repositories]
-*** xref:troubleshooting/tshoot-custom-channel.adoc[Troubleshooting Custom Channel]
->>>>>>> 64009c2b42e09ebb32ee9c2116cd0999eeda78dc
 *** xref:troubleshooting/tshoot-diskspace.adoc[Troubleshooting Disk Space]
 *** xref:troubleshooting/tshoot-firewalls.adoc[Troubleshooting Firewalls]
 *** xref:troubleshooting/tshoot-inactiveclients.adoc[Troubleshooting Inactive Clients]
 *** xref:troubleshooting/tshoot-iss.adoc[Troubleshooting Inter-Server Synchronization]
 *** xref:troubleshooting/tshoot-localcert.adoc[Troubleshooting Local Certificates]
 *** xref:troubleshooting/tshoot-logintimeout.adoc[Troubleshooting Login Timeout]
-<<<<<<< HEAD
 *** xref:troubleshooting/tshoot-mountingtmpwithnoexec.adoc[Troubleshooting Mounting /tmp with noexec]
 *** xref:troubleshooting/tshoot-notifications.adoc[Troubleshooting Notifications]
 *** xref:troubleshooting/tshoot-osadjabberd.adoc[Troubleshooting OSAD and jabberd]
@@ -133,30 +103,15 @@ endif::[]
 *** xref:troubleshooting/tshoot-registerclones.adoc[Troubleshooting Registering Cloned Clients]
 *** xref:troubleshooting/tshoot-registrationfromwebui.adoc[Troubleshooting Registration From {webui}]
 *** xref:troubleshooting/tshoot-registertradrhel.adoc[Troubleshooting Registering Traditional RHEL Clients]
-*** xref:troubleshooting/tshoot-hostname-rename.adoc[Troubleshooting Renaming the Server]
 *** xref:troubleshooting/tshoot-registeringolderclients.adoc[Troubleshooting Registering Older Clients]
+*** xref:troubleshooting/tshoot-rename-server.adoc[Troubleshooting Renaming the Server]
 *** xref:troubleshooting/tshoot-rhcdnmultiplecertificates.adoc[Troubleshooting Red Hat CDN Channel and Multiple Certificates]
 *** xref:troubleshooting/tshoot-rpctimeout.adoc[Troubleshooting RPC Timeouts]
-*** xref:troubleshooting/tshoot-saltboot.adoc[Troubleshooting Saltboot]
+*** xref:troubleshooting/tshoot-saltboot-formula.adoc[Troubleshooting Saltboot Formula]
 *** xref:troubleshooting/tshoot-saltclientsdownanddns.adoc[Troubleshooting Salt Clients Shown as Down and DNS Settings]
 *** xref:troubleshooting/tshoot-sync.adoc[Troubleshooting Synchronization]
 *** xref:troubleshooting/tshoot-taskomatic.adoc[Troubleshooting Taskomatic]
 *** xref:troubleshooting/tshoot-upgrade.adoc[Troubleshooting Upgrade]
-*** xref:troubleshooting/tshoot-clients.adoc[ADDED TSHOOT CLIENTS]
-=======
-*** xref:troubleshooting/tshoot-notifications.adoc[Troubleshooting Notifications]
-*** xref:troubleshooting/tshoot-osadjabberd.adoc[Troubleshooting OSAD and jabberd]
-*** xref:troubleshooting/tshoot-packages.adoc[Troubleshooting Packages]
-*** xref:troubleshooting/tshoot-registerclones.adoc[Troubleshooting Registering Cloned Clients]
-*** xref:troubleshooting/tshoot-registertradrhel.adoc[Troubleshooting Registering Traditional RHEL Clients]
-*** xref:troubleshooting/tshoot-hostname-rename.adoc[Troubleshooting Renaming the Server]
-*** xref:troubleshooting/tshoot-rpctimeout.adoc[Troubleshooting RPC Timeouts]
-*** xref:troubleshooting/tshoot-saltboot.adoc[Troubleshooting Saltboot]
-*** xref:troubleshooting/tshoot-sync.adoc[Troubleshooting Synchronization]
-*** xref:troubleshooting/tshoot-taskomatic.adoc[Troubleshooting Taskomatic]
-*** xref:troubleshooting/tshoot-clients.adoc[ADDED TSHOOT CLIENTS]
-*** xref:troubleshooting/troubleshooting.adoc[ADDED TSHOOT INSTALL]
->>>>>>> 64009c2b42e09ebb32ee9c2116cd0999eeda78dc
 
 ifdef::backend-pdf[]
 include::modules/ROOT/pages/common_gfdl1.2_i.adoc[leveloffset=+1]
