--- a/modules/administration/nav-administration-guide.adoc
+++ b/modules/administration/nav-administration-guide.adoc
@@ -80,38 +80,38 @@ endif::[]
 ** xref:users.adoc[Users]
 // Troubleshooting - always keep as the last chapter, arrange topics A-Z
 ** xref:troubleshooting/tshoot-intro.adoc[Troubleshooting]
-*** xref:troubleshooting/tshoot-autoinstallation.adoc[Troubleshooting Autoinstallation]
-*** xref:troubleshooting/tshoot-baremetalsystems.adoc[Troubleshooting Bare Metal Systems]
-*** xref:troubleshooting/tshoot-bootstrapendoflifecentos6clients.adoc[Troubleshooting Bootstrapping End-of-Life {centos} 6 Clients]
-*** xref:troubleshooting/tshoot-bootstraprepositoryforeolproducts.adoc[Troubleshooting Bootstrapping Repository for End-of-Life Products]
-*** xref:troubleshooting/tshoot-clonedsaltclients.adoc[Troubleshooting Cloned Salt Clients]
-*** xref:troubleshooting/tshoot-corruptrepo.adoc[Troubleshooting Corrupt Repositories]
-*** xref:troubleshooting/tshoot-custom-channel.adoc[Troubleshooting Custom Channel]
-*** xref:troubleshooting/tshoot-disablingfqdns.adoc[Troubleshooting Disabling the FQDNS Grain]
-*** xref:troubleshooting/tshoot-diskspace.adoc[Troubleshooting Disk Space]
-*** xref:troubleshooting/tshoot-firewalls.adoc[Troubleshooting Firewalls]
-*** xref:troubleshooting/tshoot-inactiveclients.adoc[Troubleshooting Inactive Clients]
-*** xref:troubleshooting/tshoot-iss.adoc[Troubleshooting Inter-Server Synchronization]
-*** xref:troubleshooting/tshoot-localcert.adoc[Troubleshooting Local Certificates]
-*** xref:troubleshooting/tshoot-logintimeout.adoc[Troubleshooting Login Timeout]
-*** xref:troubleshooting/tshoot-mountingtmpwithnoexec.adoc[Troubleshooting Mounting /tmp with noexec]
-*** xref:troubleshooting/tshoot-notifications.adoc[Troubleshooting Notifications]
-*** xref:troubleshooting/tshoot-osadjabberd.adoc[Troubleshooting OSAD and jabberd]
-*** xref:troubleshooting/tshoot-packages.adoc[Troubleshooting Packages]
-*** xref:troubleshooting/tshoot-passinggrainstostartevent.adoc[Troubleshooting Passing Grains to Start Event]
-*** xref:troubleshooting/tshoot-proxyconnectionsandfdqn.adoc[Troubleshooting Proxy Connections and FQDN]
-*** xref:troubleshooting/tshoot-registerclones.adoc[Troubleshooting Registering Cloned Clients]
-*** xref:troubleshooting/tshoot-registrationfromwebui.adoc[Troubleshooting Registration From {webui}]
-*** xref:troubleshooting/tshoot-registertradrhel.adoc[Troubleshooting Registering Traditional RHEL Clients]
-*** xref:troubleshooting/tshoot-registeringolderclients.adoc[Troubleshooting Registering Older Clients]
-*** xref:troubleshooting/tshoot-rename-server.adoc[Troubleshooting Renaming the Server]
-*** xref:troubleshooting/tshoot-rhcdnmultiplecertificates.adoc[Troubleshooting Red Hat CDN Channel and Multiple Certificates]
-*** xref:troubleshooting/tshoot-rpctimeout.adoc[Troubleshooting RPC Timeouts]
-*** xref:troubleshooting/tshoot-saltboot-formula.adoc[Troubleshooting Saltboot Formula]
-*** xref:troubleshooting/tshoot-saltclientsdownanddns.adoc[Troubleshooting Salt Clients Shown as Down and DNS Settings]
-*** xref:troubleshooting/tshoot-sync.adoc[Troubleshooting Synchronization]
-*** xref:troubleshooting/tshoot-taskomatic.adoc[Troubleshooting Taskomatic]
-*** xref:troubleshooting/tshoot-upgrade.adoc[Troubleshooting Upgrade]
+*** xref:troubleshooting/tshoot-autoinstallation.adoc[Autoinstallation]
+*** xref:troubleshooting/tshoot-baremetalsystems.adoc[Bare Metal Systems]
+*** xref:troubleshooting/tshoot-bootstrapendoflifecentos6clients.adoc[Bootstrapping End-of-Life {centos} 6 Clients]
+*** xref:troubleshooting/tshoot-bootstraprepositoryforeolproducts.adoc[Bootstrapping Repository for End-of-Life Products]
+*** xref:troubleshooting/tshoot-clonedsaltclients.adoc[Cloned Salt Clients]
+*** xref:troubleshooting/tshoot-corruptrepo.adoc[Corrupt Repositories]
+*** xref:troubleshooting/tshoot-custom-channel.adoc[Custom Channel]
+*** xref:troubleshooting/tshoot-disablingfqdns.adoc[Disabling the FQDNS Grain]
+*** xref:troubleshooting/tshoot-diskspace.adoc[Disk Space]
+*** xref:troubleshooting/tshoot-firewalls.adoc[Firewalls]
+*** xref:troubleshooting/tshoot-inactiveclients.adoc[Inactive Clients]
+*** xref:troubleshooting/tshoot-iss.adoc[Inter-Server Synchronization]
+*** xref:troubleshooting/tshoot-localcert.adoc[Local Certificates]
+*** xref:troubleshooting/tshoot-logintimeout.adoc[Login Timeout]
+*** xref:troubleshooting/tshoot-mountingtmpwithnoexec.adoc[Mounting /tmp with noexec]
+*** xref:troubleshooting/tshoot-notifications.adoc[Notifications]
+*** xref:troubleshooting/tshoot-osadjabberd.adoc[OSAD and jabberd]
+*** xref:troubleshooting/tshoot-packages.adoc[Packages]
+*** xref:troubleshooting/tshoot-passinggrainstostartevent.adoc[Passing Grains to Start Event]
+*** xref:troubleshooting/tshoot-proxyconnectionsandfdqn.adoc[Proxy Connections and FQDN]
+*** xref:troubleshooting/tshoot-registerclones.adoc[Registering Cloned Clients]
+*** xref:troubleshooting/tshoot-registrationfromwebui.adoc[Registration From {webui}]
+*** xref:troubleshooting/tshoot-registertradrhel.adoc[Registering Traditional RHEL Clients]
+*** xref:troubleshooting/tshoot-registeringolderclients.adoc[Registering Older Clients]
+*** xref:troubleshooting/tshoot-rename-server.adoc[Renaming the Server]
+*** xref:troubleshooting/tshoot-rhcdnmultiplecertificates.adoc[Red Hat CDN Channel and Multiple Certificates]
+*** xref:troubleshooting/tshoot-rpctimeout.adoc[RPC Timeouts]
+*** xref:troubleshooting/tshoot-saltboot-formula.adoc[Saltboot Formula]
+*** xref:troubleshooting/tshoot-saltclientsdownanddns.adoc[Salt Clients Shown as Down and DNS Settings]
+*** xref:troubleshooting/tshoot-sync.adoc[Synchronization]
+*** xref:troubleshooting/tshoot-taskomatic.adoc[Taskomatic]
+*** xref:troubleshooting/tshoot-upgrading.adoc[Upgrading]
 
 ifdef::backend-pdf[]
 include::modules/ROOT/pages/common_gfdl1.2_i.adoc[leveloffset=+1]
