--- a/modules/administration/pages/troubleshooting/troubleshooting.adoc
+++ b/modules/administration/pages/troubleshooting/troubleshooting.adoc
@@ -1,5 +1,5 @@
-[[upgrade-troubleshooting]]
-= Troubleshooting
+[[troubleshootingupgrading]]
+= Troubleshooting Upgrading
 
 This section contains some common problems you might encounter with {productname} upgrades, and solutions to resolving them.
 
