--- a/modules/administration/pages/troubleshooting/tshoot-upgrading.adoc
+++ b/modules/administration/pages/troubleshooting/tshoot-upgrading.adoc
@@ -1,5 +1,5 @@
-[[troubleshooting-upgrade]]
-= Troubleshooting Upgrade
+[[troubleshootingupgrading]]
+= Troubleshooting Upgrading
 
 This section contains some common problems you might encounter with {productname} upgrades, and solutions to resolving them.
 
