--- a/modules/common-workflows/pages/workflow-onboarding.adoc
+++ b/modules/common-workflows/pages/workflow-onboarding.adoc
@@ -97,9 +97,9 @@ This should be the product you just enabled:
 +
 image::activationkey_base.png[scaledwidth=80%]
 . Check the child channels to include, and any add-on system types you want clients registered with this key to have.
-  Click btn:[Create Activation Key]:
+  Click btn:[Create Activation Key].
 +
-image::child.png[scaledwidth=80%]
+//image::child.png[scaledwidth=80%]
 
 
 .Procedure: Bootstrap the client
