registration of SLE 12 clients (#1505)
https://github.com/SUSE/spacewalk/issues/14610

--- a/modules/client-configuration/pages/clients-sle.adoc
+++ b/modules/client-configuration/pages/clients-sle.adoc
@@ -42,6 +42,9 @@ The products you need for this procedure are:
 | OS Version
 | Product Name
 
+| {sles} 12 SP5
+| SUSE Linux Enterprise Server 12 SP5 x86_64
+
 | {sles} 15 SP1
 | SUSE Linux Enterprise Server 15 SP1 x86_64
 
@@ -65,6 +68,9 @@ The channels you need for this procedure are:
 
 | OS Version
 | Base Channel
+
+| {sles} 12 SP5
+| sle-product-sles12-sp5-pool-x86_64
 
 | {sles} 15 SP1
 | sle-product-sles15-sp1-pool-x86_64
@@ -109,6 +115,9 @@ To add the client tools, add these channels from the command prompt:
 
 | OS Version
 | Client Channel
+
+| {sles} 12 SP5
+| sles12-sp5-uyuni-client
 
 | {sles} 15 SP1
 | sles15-sp1-uyuni-client
