Shorten Client Upgrades nav entries (#1509)

--- a/modules/client-configuration/nav-client-configuration-guide.adoc
+++ b/modules/client-configuration/nav-client-configuration-guide.adoc
@@ -123,11 +123,11 @@ endif::[]
 ** xref:custom-info.adoc[Custom System Information]
 // Upgrades
 ** xref:client-upgrades.adoc[Client Upgrades]
-*** xref:client-upgrades-major.adoc[Client - Major Version Upgrade]
-*** xref:client-upgrades-lifecycle.adoc[Upgrade Using the Content Lifecycle Manager]
+*** xref:client-upgrades-major.adoc[Major Version Upgrade]
+*** xref:client-upgrades-lifecycle.adoc[With Content Lifecycle Management]
 *** xref:client-upgrades-product-migration.adoc[Product Migration]
 ifeval::[{uyuni-content} == true]
-*** xref:client-upgrades-uyuni.adoc[Upgrade Uyuni Clients]
+*** xref:client-upgrades-uyuni.adoc[openSUSE Leap Minor Version Upgrade]
 endif::[]
 // Virtualization
 ** xref:virtualization.adoc[Virtualization]
