label version number as an example

--- a/modules/client-configuration/pages/client-upgrades-major.adoc
+++ b/modules/client-configuration/pages/client-upgrades-major.adoc
@@ -18,7 +18,7 @@ Before you can migrate your client from SLE{nbsp}12 to SLE{nbsp}15{nbsp}, you ne
 
 
 
-.Procedure: Preparing Installation Media
+.Procedure: Preparing Installation Media (for example, SLE 15 SP2)
 . On the {productname} Server, create a local directory for the SLE{nbsp}15{nbsp}SP2 installation media:
 +
 
