clarify what to monitor

--- a/modules/specialized-guides/pages/large-deployments/hub-reporting.adoc
+++ b/modules/specialized-guides/pages/large-deployments/hub-reporting.adoc
@@ -107,8 +107,8 @@ Make sure that all reporting data are gathered at a specific point in time, and 
 | Location             | [path]``/etc/rhn/rhn.conf``
 | Example              | `report_db_hub_workers = 5`
 | After changing       | Check xref:memory-usage[memory usage].
-                         Monitor memory usage closely before and after the change.
-                         Also monitor the load of the reporting database of the hub.
+                         Monitor memory and cpu usage of the hub closely before and after the change.
+                         Also monitor the load, cpu and memory usage of the reporting database of the hub.
 | Notes                | All the data collected from the peripheral server must be written into the hub reporting database.
                          Tuning that database could increase the performance as well.
 |===
