add section about tuning parameters for report db synchronization (#1513)
* add section about tuning parameters for report db synchronization

* clarify what to monitor

* changelog

--- a/modules/specialized-guides/pages/large-deployments/hub-reporting.adoc
+++ b/modules/specialized-guides/pages/large-deployments/hub-reporting.adoc
@@ -78,3 +78,37 @@ All times are in the local timezone of the server.
 If the peripheral servers are in different timezones, it is recommended to align all the schedules.
 Make sure that all reporting data are gathered at a specific point in time, and `update-reporting-hub-default` is running when all peripheral servers have actually finished their local jobs.
 
+=== Tuning Reporting Jobs
+
+[[reportdb-batch-size]]
+=== `report_db_batch_size`
+
+[cols="1,1"]
+|===
+| Description          | The maximum number of rows fetched and written from one database to the other in one shot.
+| Tune when            | Out of memory errors or on processing speed problems.
+| Value default        | 500
+| Value recommendation | 100 - 1000
+| Location             | [path]``/etc/rhn/rhn.conf``
+| Example              | `report_db_batch_size = 750`
+| After changing       | Check xref:memory-usage[memory usage].
+                         Monitor memory usage closely before and after the change.
+|===
+
+[[reportdb-hub-workers]]
+=== `report_db_hub_workers`
+
+[cols="1,1"]
+|===
+| Description          | The maximum number of workers requesting data from peripheral servers on a hub at the same point in time.
+| Tune when            | The number of peripheral servers increases significantly (more than 100), or a faster synchronization is required.
+| Value default        | 2
+| Value recommendation | 2 - 10
+| Location             | [path]``/etc/rhn/rhn.conf``
+| Example              | `report_db_hub_workers = 5`
+| After changing       | Check xref:memory-usage[memory usage].
+                         Monitor memory and cpu usage of the hub closely before and after the change.
+                         Also monitor the load, cpu and memory usage of the reporting database of the hub.
+| Notes                | All the data collected from the peripheral server must be written into the hub reporting database.
+                         Tuning that database could increase the performance as well.
+|===
