--- a/modules/administration/pages/tshoot-hostname-rename.adoc
+++ b/modules/administration/pages/tshoot-hostname-rename.adoc
@@ -60,8 +60,9 @@ master: <new_hostname>
 ----
 systemctl restart salt-minion
 ----
-+
-. In order to fully propagate the hostname to the minion configuration (in the repositories URL for instance) apply the high state.
+
+. To fully propagate the hostname to the minion configuration apply the high state.
+  Applying the high state will update the hostname in the repository URLs.
 
 
 Traditional clients have the [path]``/etc/sysconfig/rhn/up2date`` configuration file that must be changed.
