remove confusing dash

--- a/modules/client-configuration/nav-client-configuration-guide.adoc
+++ b/modules/client-configuration/nav-client-configuration-guide.adoc
@@ -102,7 +102,7 @@ endif::[]
 **** xref:automatic-client-registration.adoc[Automatic Registration of Clients Created by Terraform]
 // Upgrades
 ** xref:client-upgrades.adoc[Client Upgrades]
-*** xref:client-upgrades-major.adoc[Client - Major Version Upgrade]
+*** xref:client-upgrades-major.adoc[Client Major Version Upgrade]
 *** xref:client-upgrades-lifecycle.adoc[Upgrade Using the Content Lifecycle Manager]
 *** xref:client-upgrades-product-migration.adoc[Product Migration]
 ifeval::[{uyuni-content} == true]
