avoid lonely section

--- a/modules/client-configuration/pages/client-upgrades-uyuni.adoc
+++ b/modules/client-configuration/pages/client-upgrades-uyuni.adoc
@@ -1,6 +1,11 @@
 [[client-upgrades-uyuni]]
 = Upgrade Uyuni Clients
 
+In this chapter, we use openSUSE Leap as an example.
+
+== Prepare the Client Upgrade
+
+.Procedure: Preparing the Client Upgrade
 . At the command prompt on the {productname} Server, as root, use the [command]``spacewalk-common-channels`` command to add the appropriate channels.
 +
 ----
@@ -41,7 +46,7 @@ To upgrade a client you replace the software repositories and update the softwar
 
 
 
-.Procedure: Updating the Client
+.Procedure: Upgrading the Client
 
 ////
 For standard clients, reactivation is not required.
