unify section titles with previous sections

--- a/modules/client-configuration/pages/client-upgrades-uyuni.adoc
+++ b/modules/client-configuration/pages/client-upgrades-uyuni.adoc
@@ -1,9 +1,9 @@
 [[client-upgrades-uyuni]]
 = Upgrade Uyuni Clients
 
-In this chapter, we use openSUSE Leap as an example.
+In this section, we use openSUSE Leap as an example.
 
-== Prepare the Client Upgrade
+== Prepare to Upgrade
 
 .Procedure: Preparing the Client Upgrade
 . At the command prompt on the {productname} Server, as root, use the [command]``spacewalk-common-channels`` command to add the appropriate channels.
@@ -40,7 +40,7 @@ Unfold [systemitem]``openSUSE Leap 15.2 (x86_64)`` to see all child channels pop
 
 
 
-== Upgrade the Client
+== Upgrade
 
 To upgrade a client you replace the software repositories and update the software, and finally reboot the client.
 
