--- a/modules/specialized-guides/pages/salt/salt-terminology.adoc
+++ b/modules/specialized-guides/pages/salt/salt-terminology.adoc
@@ -60,8 +60,9 @@ Modules::
 Functions within Salt are stored in modules.
 Salt modules are stored on clients and the {productname} Server within the [path]``/usr/lib/python*/site-packages/salt/`` directory.
 There are many types of Salt modules, including state and execution modules.
+You can write your own Salt modules using Python.
++
 For a complete list of available Salt modules, see https://docs.saltstack.com/en/latest/ref/index.html.
-Alternatively, you can write your own Salt modules using Python.
 
 Pillars::
 Pillars are created on the {productname} Server.
