--- a/modules/specialized-guides/pages/salt/salt-yomi.adoc
+++ b/modules/specialized-guides/pages/salt/salt-yomi.adoc
@@ -131,7 +131,7 @@ cobbler distro add \
   --kernel=/srv/pxe-yomi-image/linux \
   --initrd=/srv/pxe-yomi-image/initrd \
   --boot-files='/srv/tftpboot/pxe-yomi-image/image.initrd=/srv/pxe-yomi-image/image/pxe-yomi-image-sle15.x86_64-1.0.0.initrd /srv/tftpboot/pxe-yomi-image/image.kernel=/srv/pxe-yomi-image/image/pxe-yomi-image-sle15.x86_64-1.0.0.kernel /srv/tftpboot/pxe-yomi-image/image.md5=/srv/pxe-yomi-image/image/pxe-yomi-image-sle15.x86_64-1.0.0.md5 /srv/tftpboot/pxe-yomi-image/image.config.bootoptions=/srv/pxe-yomi-image/image/pxe-yomi-image-sle15-x86_64-1.0.0.config.bootoptions /srv/tftpboot/pxe-yomi-image/image.xz=/srv/pxe-yomi-image/image/pxe-yomi-image-sle15.x86_64-1.0.0.xz' \
-  --kernel-options='rd.kiwi.install.pxe rd.kiwi.install.image=tftp://server-address/pxe-yomi-image/image.xz rd.kiwi.ramdisk ramdisk_size=2097152 net.ifnames=1'
+  --kernel-options='rd.kiwi.install.pxe rd.kiwi.install.image=tftp://<server-address>/pxe-yomi-image/image.xz rd.kiwi.ramdisk ramdisk_size=2097152 net.ifnames=1'
 ----
 endif::[]
 +
@@ -142,12 +142,12 @@ cobbler distro add \
   --kernel=/srv/pxe-yomi-image/linux \
   --initrd=/srv/pxe-yomi-image/initrd \
   --boot-files='/srv/tftpboot/pxe-yomi-image/image.initrd=/srv/pxe-yomi-image/image/pxe-yomi-image-opensuse15.x86_64-1.0.0.initrd /srv/tftpboot/pxe-yomi-image/image.kernel=/srv/pxe-yomi-image/image/pxe-yomi-image-opensuse15.x86_64-1.0.0.kernel /srv/tftpboot/pxe-yomi-image/image.md5=/srv/pxe-yomi-image/image/pxe-yomi-image-opensuse15.x86_64-1.0.0.md5 /srv/tftpboot/pxe-yomi-image/image.config.bootoptions=/srv/pxe-yomi-image/image/pxe-yomi-image-opensuse15-x86_64-1.0.0.config.bootoptions /srv/tftpboot/pxe-yomi-image/image.xz=/srv/pxe-yomi-image/image/pxe-yomi-image-opensuse15.x86_64-1.0.0.xz' \
-  --kernel-options='rd.kiwi.install.pxe rd.kiwi.install.image=tftp://server-address/pxe-yomi-image/image.xz rd.kiwi.ramdisk ramdisk_size=2097152 net.ifnames=1'
+  --kernel-options='rd.kiwi.install.pxe rd.kiwi.install.image=tftp://<server-address>/pxe-yomi-image/image.xz rd.kiwi.ramdisk ramdisk_size=2097152 net.ifnames=1'
 ----
 endif::[]
 
 By default, the ``salt-minion`` service in ``pxe-yomi-image`` is configured to find the Salt master under the ``salt`` address.
-If the DNS server is not able to resolve this address, you need to adjust the ``kernel-options`` parameter from the Cobbler command that register the distribution, and add a new kernel command line of ``master=master_address``.
+If the DNS server is not able to resolve this address, you need to adjust the ``kernel-options`` parameter from the Cobbler command that register the distribution, and add a new kernel command line of ``ym.master=master_address``.
 This will override the default configuration for the ``salt-minion``.
 
 
