Additional clarification added to the page.

--- a/modules/client-configuration/pages/clients-ubuntu-old.adoc
+++ b/modules/client-configuration/pages/clients-ubuntu-old.adoc
@@ -50,6 +50,11 @@ The products you need for this procedure are:
 | {ubuntu} 18.04 | Ubuntu 18.04
 |===
 
+[IMPORTANT]
+====
+When using WebUI to add Ubuntu 18.04 channels, you also need to add ubuntu-1804-amd64-main and ubuntu-1804-amd64-main-updates channels using CLI, as described in <<ubuntu-old-channels-cli-suma>>.
+====
+
 [NOTE]
 ====
 {ubuntu} 16.04 is now at end-of-life, and the ISO images provided in the repository are out of date.
