--- a/modules/installation-and-upgrade/pages/uyuni-proxy-registration.adoc
+++ b/modules/installation-and-upgrade/pages/uyuni-proxy-registration.adoc
@@ -1,7 +1,7 @@
 [[proxy-register]]
 = Proxy Registration
 
-Proxy systems are registered as Salt clients using a bootstrap script.
+Proxy systems are registered as Salt clients using bootstrap script or {webui}.
 
 This procedure describes software channel setup and registering the installed proxy as the {productname} client, using an activation key.
 
@@ -49,8 +49,10 @@ For more information about bootstrapping, see xref:client-configuration:bootstra
 . Bootstrap the client using the script.
     For more information, see xref:client-configuration:registration-bootstrap.adoc[].
 . Navigate to menu:Salt[Keys] and accept the key.
-    When the key is accepted, the new proxy will show in menu:Systems[Overview] in the [guimenu]``
-    Recently Registered Systems`` section.
+    When the key is accepted, the new proxy will show in menu:Systems[Overview] in the [guimenu]``Recently Registered Systems`` section.
+
+. Alternatively, in the SUSE Manager Web UI, navigate to menu:System[Bootstrapping].
++
 . Navigate to menu:System Details[Software > Software Channels], and check that the proxy channel is selected.
 
 // Next action:
