Upgrade SUSE Clients (#1510)
* mention openSUSE Leap to {sle} migration
https://github.com/SUSE/spacewalk/issues/12793
* also mention leap minor version upgrade
* move client-upgrades-uyuni.adoc to the upgrade sections
* label version number as an example

--- a/modules/client-configuration/nav-client-configuration-guide.adoc
+++ b/modules/client-configuration/nav-client-configuration-guide.adoc
@@ -99,8 +99,29 @@ endif::[]
 // Public Cloud Clients
 *** xref:clients-pubcloud.adoc[Public Cloud Clients]
 **** xref:automatic-client-registration.adoc[Automatic Registration of Clients Created by Terraform]
+// Upgrades
+** xref:client-upgrades.adoc[Client Upgrades]
+*** xref:client-upgrades-major.adoc[Major Version Upgrade]
+*** xref:client-upgrades-lifecycle.adoc[With Content Lifecycle Manager]
+*** xref:client-upgrades-product-migration.adoc[Product Migration]
+ifeval::[{uyuni-content} == true]
+*** xref:client-upgrades-uyuni.adoc[openSUSE Leap Minor Version Upgrade]
+endif::[]
 // Delete clients
-** xref:delete-clients.adoc[Delete Clients]
+** xref:delete-clients.adoc[Client Deletion]
+// Additional client operations
+** xref:client-operations.adoc[Client Operations]
+*** xref:package-management.adoc[Package Management]
+*** xref:patch-management.adoc[Patch Management]
+*** xref:system-locking.adoc[System Locking]
+*** xref:configuration-management.adoc[Configuration Management]
+*** xref:power-management.adoc[Power Management]
+*** xref:snapshots.adoc[Configuration Snapshots]
+*** xref:custom-info.adoc[Custom System Information]
+//  Client Admin Tasks
+*** xref:system-set-manager.adoc[System Set Manager]
+*** xref:system-groups.adoc[System Groups]
+*** xref:system-types.adoc[System Types]
 // Automated Installation
 ** xref:autoinst-intro.adoc[Operating System Installation]
 *** xref:autoinst-reinstall.adoc[Reinstall Registered Systems]
